--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
     <artifactId>caseCup</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2</version>
     <packaging>jar</packaging>
 
 
@@ -52,6 +52,11 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
