--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/casecup?autoReconnect=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-#spring.datasource.username = roma
-#spring.datasource.password = 1234
+spring.datasource.username = roma
+spring.datasource.password = 1234
 ##
-spring.datasource.username = sergey
-spring.datasource.password = qwerty123456
+#spring.datasource.username = sergey
+#spring.datasource.password = qwerty123456
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
